//
//  Constants.swift
//  FXCalculator
//
//  Created by Animesh Mishra on 14/07/19.
//  Copyright © 2019 Animesh Mishra. All rights reserved.
//

import Foundation

struct Constants {
    struct Currency {
        static let aud = "AUD"
        static let aed = "AED"
        static let usd = "USD"
    }
    static let notAvailable = "N/A"
    static let notAvailableResult = "Not Available"
    static let allowedRegx = "0123456789."
}
