...
                            <rect key="frame" x="0.0" y="20" width="192" height="30"/>
                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="buttonAction:" destination="-1" eventType="touchUpInside" id="KbF-Pq-0cm"/>
                            </connections>
                        </button>
                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Value" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UAU-dM-7lo">
                            <rect key="frame" x="0.0" y="70" width="192" height="30"/>
                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <nil key="textColor"/>
                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                            <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
                        </textField>
...
