...
                                <nil key="highlightedColor"/>
                            </label>
                            <toolbar hidden="YES" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Txv-9e-oZm">
                                <rect key="frame" x="0.0" y="476" width="414" height="44"/>
                                <items>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Hmg-8h-JV4"/>
                                    <barButtonItem title="Done" id="JZZ-KO-aC3">
                                        <connections>
                                            <action selector="doneButtonTapped:" destination="BYZ-38-t0r" id="4sY-AC-B55"/>
                                        </connections>
                                    </barButtonItem>
                                </items>
                            </toolbar>
...
